@@ -1,5 +1,5 @@
 /*
- * $Id: cairo.trm,v 1.3 2007/08/07 04:55:22 sfeam Exp $
+ * $Id: cairo.trm,v 1.4 2007/08/20 09:46:06 tlecomte Exp $
  */
 
 /* GNUPLOT - cairo.trm */
@@ -306,6 +306,10 @@ void cairopdf_init()
 	plot.dashlength = cairopdf_dl;
 	/* it is up to the pdf viewer to do the hinting */
 	plot.hinting = 0;
+	/* disable OPERATOR_SATURATE, not implemented in cairo pdf backend,
+	 * results in bitmap fallback. However, polygons are drawn with seams
+	 * between each other. */
+	plot.polygons_saturate = FALSE;
 
 	/* is supposed to be done in cairopdf_reset */
 	if ( plot.cr )
